# autoware_vision_pilot

./: .gitattributes  AGENTS.md  CLAUDE.md  Makefile  ONBOARDING.md  README.md  download_egolanes_checkpoint.sh  run_egolanes_inference.py  run_simulation.sh  start_carla.sh  start_soda_sim.sh
.planning/: PHASES.json  PLAN-Setup.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-mvp-perception/: 01-01-PLAN.md  01-SUMMARY.md
.planning/phases/02-simulation-env/: 02-01-PLAN.md  02-SUMMARY.md
.planning/phases/03-integration-testing/: 03-01-PLAN.md  03-SUMMARY.md
.planning/phases/04-documentation/: 04-01-PLAN.md  04-SUMMARY.md
.planning/research/: README.md
Models/: requirements.txt
Models/data_parsing/AutoDrive/zod/: debug_cipo_radar_viz.py  debug_labels_viz.py  debug_zod_grid.py  run_cipo_radar.py  run_full_pipeline.py  zod_utils.py
Models/data_parsing/AutoSteer/: augment.py
Models/data_parsing/AutoSteer/CurveLanes/: README.md  converter.py
Models/data_parsing/AutoSteer/OpenLane/: README.md  converter.py
Models/data_parsing/AutoSteer/TuSimple/: README.md  converter.py  test_conversion.py
Models/data_parsing/Lite/curvelanes/: process_curvelanes.py
Models/data_parsing/Lite/mapillary/: mapillary2cityscapes_map.py  process_mapillary.py
Models/data_utils/: augmentations.py  load_data_auto_drive.py
Models/data_utils/auto_steer/: load_data_auto_steer.py
Models/inference/: auto_steer_infer.py  cli.py  example_config.yaml  output_writer.py
Models/model_components/auto_speed/: auto_speed_network.py
Models/model_components/auto_steer/: auto_steer_backbone.py  auto_steer_neck.py  auto_steer_network.py  auto_steer_percept_head.py
Models/model_components/autodrive/: autodrive_backbone.py  autodrive_head.py  autodrive_network.py
Models/model_library/AutoSpeed/: README.md  tutorial.ipynb
Models/model_library/AutoSteer/: README.md  tutorial.ipynb
Models/training/: auto_drive_trainer.py  auto_speed_trainer.py  auto_steer_trainer.py  auto_steer_util.py  train_auto_drive.py
Models/visualizations/AutoSteer/: video_visualization.py
VisionPilot/development_releases/1.0/: CMakeLists.txt  README.md  VisionPilot.conf.example  main.cpp  visionpilot.conf
VisionPilot/development_releases/1.0/include/camera/: camera_calibration.hpp
VisionPilot/development_releases/1.0/include/config/: config_reader.hpp
VisionPilot/development_releases/1.0/src/camera/: camera_calibration.cpp
VisionPilot/development_releases/1.0/src/config/: config_reader.cpp
docker/: Dockerfile  Dockerfile.carla  Dockerfile.soda  docker-compose.yml
outputs/egolanes/: daytime_fair_weather_1_prediction.npy  daytime_fair_weather_2_prediction.npy  nighttime_fair_weather_1_prediction.npy
simulations/: carla_egolanes_client.py
tests/: test_carla_integration.py  test_cli_help.py
